plan settings create model added
