# app/Http/Controllers/PlanController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use App\Models\Plan;
 use App\Models\PlanDetails;
+use App\Services\StripePaymentService;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
 
@@ -30,7 +31,7 @@ class PlanController extends Controller
      *
      *
      * @OA\Post (path="/api/plan",
-     *     tags={"Category"},
+     *     tags={"Plan"},
      *     security={{ "apiAuth": {} }},
      *
      *
@@ -113,10 +114,13 @@ class PlanController extends Controller
         $validateData = Validator::make($request->all(), [
             'name'              => 'required',
             'description'       => 'required',
-            'price'             => 'required',
             'currency'          => 'required',
+            'amount'          => 'required',
             'interval'          => 'required',
             'interval_duration' => 'required',
+            'feature' => 'required',
+            'features_count' => 'required',
+            'value' => 'required',
         ]);
 
         if ($validateData->fails()) {
@@ -125,34 +129,29 @@ class PlanController extends Controller
                 'errors'  => $validateData->errors()
             ], 422);
         }
-        $created_by = auth()->user()->id;
-        $updated_by = auth()->user()->id;
         $uid        = 'PLN-' . time() . rand(10, 99);
 
         $data = [
             'name'              => $request->name,
             'description'       => $request->description,
-            'price'             => $request->price,
+            'amount'             => $request->price,
             'currency'          => $request->currency,
             'interval'          => $request->interval,
             'interval_duration' => $request->interval_duration,
-            'created_by'        => $created_by,
-            'updated_by'        => $updated_by,
             'uid'               => $uid
         ];
 
 
         $plan         = Plan::create($data);
         $plan_details = [
-            'name'       => $request->name,
             'feature'    => $request->feature,
             'value'      => $request->value,
-            'currency'   => $request->currency,
             'plan_id'    => $plan->id,
             'created_by' => $created_by,
             'updated_by' => $updated_by,
         ];
         PlanDetails::create($plan_details);
+        StripePaymentService::createPrice($data);
         return response()->json([
             'success' => true,
             'message' => 'Plan created successfully!'
@@ -176,7 +175,85 @@ class PlanController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
+     * Update this plan.
+     *
+     *
+     * @OA\Post (path="/api/plan/{id}",
+     *     tags={"Plan"},
+     *     security={{ "apiAuth": {} }},
+     *
+     *
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="name",
+     *         required=true,
+     *
+     *         @OA\Schema(type="string"),
+     *         example="Doel Rana",
+     *     ),
+     *
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="description",
+     *         required=true,
+     *
+     *         @OA\Schema(type="string"),
+     *         example="This is just description",
+     *     ),
+     *     @OA\Parameter(
+     *     in="query",
+     *     name="price",
+     *     required=true,
+     *     @OA\Schema(type="string"),
+     *     example="100",
+     *     ),
+     *
+     *     @OA\Parameter(
+     *     in="query",
+     *     name="currency",
+     *     required=true,
+     *     @OA\Schema(type="string"),
+     *     example="USD",
+     *     ),
+     *
+     *     @OA\Parameter(
+     *     in="query",
+     *     name="interval",
+     *     required=true,
+     *     @OA\Schema(type="string"),
+     *     example="month",
+     *     ),
+     *
+     *     @OA\Parameter(
+     *     in="query",
+     *     name="interval_duration",
+     *     required=true,
+     *     @OA\Schema(type="string"),
+     *     example="1",
+     *     ),
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Property(property="success", type="boolean", example="true"),
+     *               @OA\Property(property="errors", type="json", example={"message": {"Category created successfully."}}),
+     *          ),
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=422,
+     *          description="Invalid data",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Property(property="success", type="boolean", example="false"),
+     *              @OA\Property(property="errors", type="json", example={"message": {"The given data was invalid."}}),
+     *          )
+     *      )
+     * )
      */
     public function update(Request $request, string $id)
     {
@@ -212,4 +289,6 @@ class PlanController extends Controller
     {
         //
     }
+
+
 }
